# zenity-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: error.rs  lib.rs  main.rs
src/backend/: mod.rs  x11.rs
src/backend/wayland/: mod.rs  shm.rs
src/render/: mod.rs  text.rs
src/ui/: calendar.rs  entry.rs  file_select.rs  forms.rs  list.rs  message.rs  mod.rs  progress.rs  scale.rs  text_info.rs
src/ui/widgets/: button.rs  mod.rs  progress_bar.rs  text_input.rs
